# UAV_common

./: .gitignore  CMakeLists.txt  Doxyfile  _p_i_d_8cpp.html  _p_i_d_8cpp__incl.dot  _p_i_d_8hpp.html  _p_i_d_8hpp__dep__incl.dot  _p_i_d_8hpp__incl.dot  _p_i_d_8hpp_source.html  _p_i_d__discrete_8cpp.html  _p_i_d__discrete_8cpp__incl.dot  _p_i_d__discrete_8hpp.html  _p_i_d__discrete_8hpp__dep__incl.dot  _p_i_d__discrete_8hpp__incl.dot  _p_i_d__discrete_8hpp_source.html  aero__coefficients_8hpp.html  aero__coefficients_8hpp__dep__incl.dot  aero__coefficients_8hpp__incl.dot  aero__coefficients_8hpp_source.html  annotated.html  annotated_dup.js  bang__bang_8cpp.html  bang__bang_8cpp__incl.dot  bang__bang_8hpp.html  bang__bang_8hpp__dep__incl.dot  bang__bang_8hpp__incl.dot  bang__bang_8hpp_source.html  class_ammo-members.html  class_ammo.html  class_ammo.js  class_ammo__inherit__graph.dot  class_cargo-members.html  class_cargo.html  class_cargo.js  class_cargo__inherit__graph.dot  class_control_surfaces-members.html  class_control_surfaces.html  class_control_surfaces.js  class_controller-members.html  class_controller.html  (+274 more)
.github/workflows/: doxygen.yml
docs/latex/: _p_i_d_8cpp.tex  _p_i_d_8cpp.tex.tmp  _p_i_d_8cpp__incl.dot  _p_i_d_8hpp.tex  _p_i_d_8hpp__dep__incl.dot  _p_i_d_8hpp__incl.dot  _p_i_d__discrete_8cpp.tex  _p_i_d__discrete_8cpp__incl.dot  _p_i_d__discrete_8hpp.tex  _p_i_d__discrete_8hpp__dep__incl.dot  _p_i_d__discrete_8hpp__incl.dot  aero__coefficients_8hpp.tex  aero__coefficients_8hpp__dep__incl.dot  aero__coefficients_8hpp__incl.dot  annotated.tex  bang__bang_8cpp.tex  bang__bang_8cpp__incl.dot  bang__bang_8hpp.tex  bang__bang_8hpp__dep__incl.dot  bang__bang_8hpp__incl.dot  class_ammo.tex  class_ammo__coll__graph.dot  class_cargo.tex  class_cargo__inherit__graph.dot  class_control_surfaces.tex  class_controller.tex  class_controller__inherit__graph.dot  class_controller_test.tex  class_controller_test__coll__graph.dot  class_hinge.tex  class_jet.tex  class_jet__coll__graph.dot  class_jet__inherit__graph.dot  class_load.tex  class_load__inherit__graph.dot  class_logger.tex  class_o_d_e.tex  class_o_d_e___euler.tex  class_o_d_e___euler__inherit__graph.dot  class_o_d_e___heun.tex  (+132 more)
header/: common.hpp
scripts/: controller_plots.m
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  (+68 more)
src/PID/: PID.cpp  PID.hpp
src/RK4/: RK4_test.cpp
src/components/: aero_coefficients.hpp  aero_cofficients.hpp  components.hpp  control_surfaces.cpp  control_surfaces.hpp  drive.hpp  hinge.cpp  hinge.hpp  loads.cpp  loads.hpp  navi.hpp
src/controllers/: controller.cpp  controller.hpp  controller_test.cpp
src/controllers/impl/: PID.cpp  PID.hpp  PID_discrete.cpp  PID_discrete.hpp  PIFF.cpp  PIFF.hpp  bang_bang.cpp  bang_bang.hpp  double_setpoint.cpp  double_setpoint.hpp  z_trans.cpp  z_trans.hpp
src/logger/: logger.cpp  logger.hpp
src/ode/: ode.cpp  ode.hpp  ode_impl.hpp  ode_test.cpp
src/parser/: parser.cpp  parser.hpp  uav_params.cpp  uav_params.hpp
src/timed_loop/: status.hpp  timed_loop.cpp  timed_loop.hpp
